# bassly

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
bassly/: analysis.py  cli.py  domain.py  practice.py  sheet.py  tabtext.py  theory.py  verify.py
docs/: philosophy.md
lessons/: chord-tones.md  chromatic-approach.md  degree-progressions.md  degrees.md  fourths-tuning.md  octaves.md  pedal.md  pentatonic.md  slash-chords.md
tests/: test_analysis.py  test_practice.py  test_sheet.py  test_tabtext.py  test_theory.py  test_verify.py
